fixed footer shift

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ html, body {
     left: 10px;
     right: 10px;
     top: 52px;
-    bottom: 30px;
+    bottom: 35px;
 }
 
 .xline {
@@ -90,7 +90,7 @@ html, body {
 li { cursor: pointer; cursor: hand; }
 
 .footer {
-    bottom:0;
+    bottom:5px;
     width:100%;
     height:30px;
     position:absolute;
